--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:index": "nodemon src/index.ts",
+    "watch:index": "nodemon src/test.ts",
     "watch:bank": "nodemon src/bank.ts",
     "build": "tsc"
   },
