--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-fetch": "^3.1.5",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
